// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScrollArea > renders with as correctly 1`] = `
"<section data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col"></div>
</section>"
`;

exports[`ScrollArea > renders with class correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden custom-class">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col"></div>
</div>"
`;

exports[`ScrollArea > renders with default slot correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col">Default slot</div>
</div>"
`;

exports[`ScrollArea > renders with items correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`ScrollArea > renders with orientation horizontal correctly 1`] = `
"<div data-slot="root" class="relative overflow-x-auto overflow-y-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 flex-row"></div>
</div>"
`;

exports[`ScrollArea > renders with orientation vertical correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col"></div>
</div>"
`;

exports[`ScrollArea > renders with ui correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden custom-root">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize boolean correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col" style="position: relative; inline-size: 100%; block-size: 364px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize enabled false correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col">
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
    <div data-slot="item" class=""></div>
  </div>
</div>"
`;

exports[`ScrollArea > renders with virtualize gap correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col" style="position: relative; inline-size: 100%; block-size: 352px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize lanes correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col" style="position: relative; inline-size: 100%; block-size: 132px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize loadMoreThreshold correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col" style="position: relative; inline-size: 100%; block-size: 364px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize object correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col" style="position: relative; inline-size: 100%; block-size: 214px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize padding correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col" style="position: relative; inline-size: 100%; block-size: 372px;"></div>
</div>"
`;

exports[`ScrollArea > renders with virtualize scrollMargin correctly 1`] = `
"<div data-slot="root" class="relative overflow-y-auto overflow-x-hidden">
  <div data-slot="viewport" class="relative flex gap-4 p-4 columns-xs flex-col" style="position: relative; inline-size: 100%; block-size: 364px;"></div>
</div>"
`;
